# Scroll

./: Cargo.toml  Dioxus.toml  README.org
.cargo/: config.toml
assets/: dark.css  main.css
src/: abyss.rs  db_popup.rs  file_explorer.rs  files.rs  home.rs  load.rs  main.rs  metadata_popup.rs  new.rs  prelude.rs
src/tools/: JSONProcessor.rs  ScrollProcessor.rs  compare.rs  custom_panic.rs  json_processor.rs  mod.rs  scroll_processor.rs  serde.rs
src/types/: aliases.rs  files.rs  generator.rs  input.rs  mod.rs  statics.rs
