[package]
name = "Scroll"
version = "0.3.0"
authors = ["Sebastian Hyland <st.hyland05@gmail.com>"]
description = "A local documentation management and ELN tool"
homepage = "https://github.com/seb-hyland/DocManager"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0-alpha.5", features = ["desktop", "router"] }
eyre = "0.6.12"
homedir = "0.3.4"
indexmap = {version = "2.6.0", features = ["serde"]}
rusqlite = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
