[package]
name = "Scroll"
version = "0.3.0"
authors = ["Sebastian Hyland <st.hyland05@gmail.com>"]
description = "A local documentation management and ELN tool"
homepage = "https://github.com/seb-hyland/DocManager"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.1", features = ["desktop", "router"] }
eyre = "0.6.12"
homedir = "0.3.4"
native-dialog = "0.7.0"
nom = "7.1.3"
rayon = "1.10.0"
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
